########################################################################
# Create n3gpp_access project
########################################################################
cmake_minimum_required(VERSION 3.16)
project(n3gpp_access)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

########################################################################
# Add directories
########################################################################
add_subdirectory(libs)
